# city-cycling

./: Cargo.toml  README.md  Rocket.toml  london_santander_bike_points.json
src/: bike_point.rs  loader.rs  main.rs  redis_wrapper.rs  store.rs
src/connectors/: london.rs  mod.rs
