[package]
name = "city_cycling"
version = "0.1.0"
authors = ["Sebastien Kovacs <sebastien.kovacs.dev@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
rocket_contrib = { version = "0.4.2", features = ["mongodb_pool", "json"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

bson = "0.13"

reqwest = "0.9.18"

r2d2 = "*"
mongodb = "0.3.12"